[project]
name = "pylem"
version = "0.1.0"
description = "Pylem — The primordial Python programming language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.2.0",      # Parser
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]